<!--
  ~ Copyright (c) 2020.
  ~ Animize Devs
  ~ Copyright 2019 - 2020
  ~ Davin Alfarizky Putra Basudewa <dbasudewa@gmail.com>
  ~ This program used for watching anime without ads.
  ~
  -->

<resources>
    <string name="app_name">Animize</string>
    <string name="login_username_txt">Email</string>
    <string name="login_password_txt">Password</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_register">Register</string>
    <string name="list_view_episode">Episode : </string>
    <string name="loadingtxt">Loading</string>
    <string name="loading_error">Data corrupt,please try again</string>
    <string name="btn_retry">Retry</string>
    <string name="string_of">OF</string>
    <string name="rating_text">Rating:</string>
    <string name="episode_text">Episode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_text">What do you want to search?</string>
    <string name="datalinkerror">Data-Link Error</string>
    <string name="search_anime">Search Anime...</string>
    <string name="no_title_provided">You must enter known title!</string>
    <string name="play_synopsis">Synopsis</string>
    <string name="play_playlist">More on this series...</string>
    <string name="text_register">Register</string>
    <string name="txt_regist_name">Name</string>
    <string name="regist_community">Please read carefully the Term Of Service.Take a concern if you check the box,you deserve to follow our community guidelines</string>
    <string name="cb_tos">I consent to hereby obedient the T.O.S</string>
    <string name="disclaimer">This is fansub only,not for selling. \nAll item sell on this app is not related to anime list and\nendorse production houses.</string>
    <string name="search_not_provided">Please provide keyword</string>
    <string name="home_see_more">See More</string>
    <string name="last_uploaded_txt">New Episode!</string>
    <string name="nav_home_txt">Dashboard</string>
    <string name="nav_genre_txt">Genre</string>
    <string name="nav_anime_txt">Anime</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pager_title_details">Details</string>
    <string name="pager_title_more">More</string>
    <string name="service_name">Animize Player</string>
    <string name="NO_NETWORK">No Internet Connection</string>
    <string name="btn_logout">Logout</string>
    <string name="video_source">Video Source</string>
    <string name="no_sources">No Sources Found!</string>
    <string name="last_package">New Anime!</string>
    <string name="movies">Movies</string>
    <string name="synopsis">Synopsis</string>
    <string name="videos">Videos</string>
    <string name="category">Category:</string>
    <string name="uploaded_by">Uploaded By:</string>
    <string name="last_modified_by">Last Modified By:</string>
    <string name="comment">Comment</string>
    <string name="source">Source</string>
    <string name="playlist">Playlist</string>
    <string name="tab_star">Starred</string>
    <string name="tab_recent">Recent</string>
    <string name="tab_download">Download</string>
    <string name="offline_service">Animize Offline Servicing</string>
    <string name="track_selection_title">Title</string>
</resources>
