<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    >
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/txt_regist_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regist_name_tf"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_edit"
            android:hint="@string/txt_regist_name"
            android:textColorHint="@color/secondaryDarkColor2"
            android:textColor="@color/secondaryLightColor"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/login_username_txt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regist_email_tf"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_edit"
            android:hint="@string/login_username_txt"
            android:textColorHint="@color/secondaryDarkColor2"
            android:textColor="@color/secondaryLightColor"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/login_password_txt"
        app:passwordToggleEnabled="true"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regist_password_tf"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_edit"
            android:hint="@string/login_password_txt"
            android:textColorHint="@color/secondaryDarkColor2"
            android:textColor="@color/secondaryLightColor"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regist_community"
            android:textAlignment="center"
            android:textColor="@color/secondaryLightColor" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple_forrounded"
            android:layout_centerInParent="true"
            android:id="@+id/tos_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="T.O.S"
            android:textColor="@color/secondaryDarkColor2"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/checkbox_regist_tos_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundbutton"
            android:backgroundTint="@color/secondaryDarkColor"
            android:foreground="@drawable/layoutrippleeffect"
            android:text="@string/cb_tos"
            android:textColor="@color/design_default_color_on_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_gravity="center"
        android:background="@drawable/round_layout"
        android:backgroundTint="@color/yellow"
        android:foreground="@drawable/ripple_forrounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:textColor="@color/secondaryLightColor"/>

</LinearLayout>