<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020.
  ~ Animize Devs
  ~ Copyright 2019 - 2020
  ~ Davin Alfarizky Putra Basudewa <dbasudewa@gmail.com>
  ~ This program used for watching anime without ads.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/login_username_txt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_userfield"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_edit"
            android:hint="@string/login_username_txt"
            android:textColorHint="@color/secondaryDarkColor2"
            android:textColor="@color/secondaryLightColor"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/login_password_txt"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_passwordfield"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_edit"
            android:hint="@string/login_password_txt"
            android:textColorHint="@color/secondaryDarkColor2"
            android:textColor="@color/secondaryLightColor"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_signin_btn"
        android:layout_gravity="center"
        android:background="@drawable/button_red"
        android:foreground="@drawable/ripple_forrounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textColor="@color/secondaryLightColor"/>
</LinearLayout>