<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020.
  ~ Animize Devs
  ~ Copyright 2019 - 2020
  ~ Davin Alfarizky Putra Basudewa <dbasudewa@gmail.com>
  ~ This program used for watching anime without ads.
  ~
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.LastUpAnime">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--Toolbar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryLightColor"
                android:text="@string/last_uploaded_txt"
                android:textSize="32sp"/>
        </LinearLayout>


        <!-- TODO: Update blank fragment layout -->
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.recyclerview.widget.RecyclerView
                tools:listitem="@layout/video_list_view"
                android:id="@+id/PlayVideoList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:scrollbars="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="50dp" />


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>


    <ImageView
        android:id="@+id/error_image"
        android:layout_width="103dp"
        android:layout_height="101dp"

        android:layout_marginStart="154dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="417dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_astronaut" />

    <Button

        android:id="@+id/loading_retry"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="282dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="343dp"
        android:text="@string/btn_retry"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loading_errortxt"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="383dp"
        android:text="@string/loading_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:visibility="gone"
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="384dp"
        android:text="@string/loadingtxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.wang.avi.AVLoadingIndicatorView
        android:visibility="gone"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="415dp"
        android:secondaryProgressTint="@color/design_default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="PacmanIndicator"
        app:layout_constraintTop_toTopOf="parent" />

</FrameLayout>