<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anim_background_gradient_list"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="291dp"
            android:layout_marginEnd="353dp"
            android:layout_marginBottom="416dp"
            android:text="@string/login_username_txt"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.486" />

        <EditText
            android:id="@+id/login_userfield"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="329dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="357dp"
            android:background="@drawable/textbox_rounded"
            android:ems="10"
            android:inputType="textWebEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="386dp"
            android:layout_marginEnd="321dp"
            android:layout_marginBottom="321dp"
            android:text="@string/login_password_txt"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_passwordfield"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="425dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="261dp"
            android:background="@drawable/textbox_rounded"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/login_signin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="290dp"
            android:layout_marginTop="479dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="204dp"
            android:background="@drawable/roundbutton"
            android:onClick="btn_login_action"
            android:text="@string/btn_login"
            android:textColor="@color/design_default_color_on_primary"
            android:theme="@style/loginbutton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/login_regist_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="193dp"
            android:layout_marginTop="479dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="204dp"
            android:background="@drawable/roundbutton"
            android:onClick="btn_regist_action"
            android:text="@string/btn_register"
            android:textColor="@color/design_default_color_on_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="123dp"
            android:layout_marginTop="561dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="74dp"
            android:text="2019, DVNLABS.ML"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="136dp"
            android:layout_height="22dp"
            android:layout_marginStart="149dp"
            android:layout_marginTop="602dp"
            android:layout_marginEnd="126dp"
            android:layout_marginBottom="35dp"
            android:text="Testing Build 102 "
            android:textColor="@color/design_default_color_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loading_login"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="133dp"
            android:layout_marginTop="442dp"
            android:layout_marginEnd="228dp"
            android:layout_marginBottom="167dp"
            android:visibility="visible"
            app:indicatorColor="#FFFF"
            app:indicatorName="BallPulseIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>